--- a/.gitmodules
+++ b/.gitmodules
@@ -1,1 +1,4 @@
 
+[submodule "opingsoc.github.io.wiki"]
+	path = opingsoc.github.io.wiki
+	url = https://github.com/opingsoc/opingsoc.github.io.wiki.git
